Refactored PathWalker